ros2_ws/log/build_2024-10-26_09-39-41/controller/stdout_stderr.log
running egg_info
writing ../../build/controller/controller.egg-info/PKG-INFO
writing dependency_links to ../../build/controller/controller.egg-info/dependency_links.txt
writing entry points to ../../build/controller/controller.egg-info/entry_points.txt
writing requirements to ../../build/controller/controller.egg-info/requires.txt
writing top-level names to ../../build/controller/controller.egg-info/top_level.txt
reading manifest file '../../build/controller/controller.egg-info/SOURCES.txt'
writing manifest file '../../build/controller/controller.egg-info/SOURCES.txt'
running build
running build_py
copying controller/quadrupedRobot.py -> /home/DATA/DogRobot/ros2_ws/build/controller/build/lib/controller
copying controller/convertAngle2Position.py -> /home/DATA/DogRobot/ros2_ws/build/controller/build/lib/controller
running install
running install_lib
copying /home/DATA/DogRobot/ros2_ws/build/controller/build/lib/controller/quadrupedRobot.py -> /home/DATA/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller
copying /home/DATA/DogRobot/ros2_ws/build/controller/build/lib/controller/convertAngle2Position.py -> /home/DATA/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller
byte-compiling /home/DATA/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller/quadrupedRobot.py to quadrupedRobot.cpython-312.pyc
  File "/home/DATA/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller/quadrupedRobot.py", line 203
    idxRR = 4, idxRL = 4, idxFR = 4, idxFL = 4
    ^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

byte-compiling /home/DATA/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller/convertAngle2Position.py to convertAngle2Position.cpython-312.pyc
running install_data
running install_egg_info
removing '/home/DATA/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/controller/controller.egg-info to /home/DATA/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller-0.0.0-py3.12.egg-info
running install_scripts
Installing control script to /home/DATA/DogRobot/ros2_ws/install/controller/lib/controller
writing list of installed files to '/home/DATA/DogRobot/ros2_ws/build/controller/install.log'
